--- a/css/home.css
+++ b/css/home.css
@@ -3,12 +3,12 @@
   width: 100%;
 }
 .left-sidebar{
-  background-color:#3A3A3A;
+  background-color:#242020;
   padding: 0px;
 }
 .searchbox{
   width: 100%;
-  padding:27px 10px;
+  padding:28px 10px;
   border-bottom:2px solid #000;
 }
 .form-control,.search-icon,.search-icon:hover{
@@ -169,6 +169,11 @@
   bottom:150px;
   border:15px solid transparent;
   border-bottom-color:#94C2ED; 
+}
+.caht-up-profile{
+  border-radius:50px;
+  border : 2px solid #66ff98;
+  margin-bottom:10px;
 }
 @media only screen and (max-width:320px){
   .main-section{
